fixed overlaped display of description in pdf invoicing merge

--- a/assets/css/pdf_or.css
+++ b/assets/css/pdf_or.css
@@ -137,7 +137,7 @@ body{
     /* background: #0001; */
      font-size: 13px;
      font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-     width: 200px;
+     width: 350px;
      left: 55px; 
      top: 270px;
      position: absolute;  
